# AI_compliance

./: README.md  ad_copy.txt  backend.py  business_info.txt  guidelines.txt  hybrid_checker.py  pyproject.toml  recommendation.txt  rules_config.json
web/: index.html
